client/src/index.css
@import "tailwindcss";

@media print {

  body {
    background: white !important;
  }

  .no-print {
    display: none !important;
  }

  .print-section {

    box-shadow: none !important;

    margin: 0 !important;

    padding: 10px !important;

    width: 100% !important;

    background: white !important;

  }

}

html {
  scroll-behavior: smooth;
}

body {
  font-family: 'Poppins', sans-serif;
}

html,
body {
  width: 100%;
}

* {
  outline: 1px solid red;
}

